--- a/7-questions/setup/index.html
+++ b/7-questions/setup/index.html
@@ -18,7 +18,77 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>questions project</h1>
+    <section class="questions">
+      <!--title-->
+      <div class="title">
+        <h2>General Questions</h2>
+      </div>
+      <!--questions-->
+      <div class="section-center">
+        <!--single question-->
+        <article class="question">
+          <!--question title-->
+          <div class="question-title">
+            <p>Do you wanna dance?</p>
+            <button type = "button" class="question-btn">
+              <span class = "plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <!--question text-->
+          <div class="question-text">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur voluptas ipsam quasi quaerat ab ea eius magni consectetur dolorum, inventore, possimus repudiandae enim neque maxime. Aperiam qui ea iusto dolor.</p>
+          </div>
+        </article>
+        <!--end single question-->
+
+         <!--single question-->
+         <article class="question">
+          <!--question title-->
+          <div class="question-title">
+            <p>Do you wanna eat?</p>
+            <button type = "button" class="question-btn">
+              <span class = "plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <!--question text-->
+          <div class="question-text">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur voluptas ipsam quasi quaerat ab ea eius magni consectetur dolorum, inventore, possimus repudiandae enim neque maxime. Aperiam qui ea iusto dolor.</p>
+          </div>
+        </article>
+        <!--end single question-->
+
+         <!--single question-->
+         <article class="question">
+          <!--question title-->
+          <div class="question-title">
+            <p>Do you wanna sing?</p>
+            <button type = "button" class="question-btn">
+              <span class = "plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <!--question text-->
+          <div class="question-text">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur voluptas ipsam quasi quaerat ab ea eius magni consectetur dolorum, inventore, possimus repudiandae enim neque maxime. Aperiam qui ea iusto dolor.</p>
+          </div>
+        </article>
+        <!--end single question-->
+      </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
