--- a/8-menu/setup/index.html
+++ b/8-menu/setup/index.html
@@ -13,7 +13,45 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>menu project</h1>
+    <section class="menu">
+      <!--title-->
+      <div class="title">
+        <h2>our menu</h2>
+        <div class="underline"></div>
+      </div>
+      <!--filter buttons-->
+      <div class="btn-container">
+        <!-- <button class = "filter-btn" type = "button" data-id = "all">
+          all
+        </button>
+        <button class = "filter-btn" type = "button" data-id = "breakfast">
+          breakfast
+        </button>
+        <button class = "filter-btn" type = "button" data-id = "lunch">
+          lunch
+        </button>
+        <button class = "filter-btn" type = "button" data-id = "shakes">
+          shakes
+        </button> -->
+      </div>
+      <!--menu items-->
+      <div class="section-center">
+        <!--single item beg-->
+      <article class="menu-item">
+        <img src="menu-item.jpeg"  class = "photo" alt="menu item">
+        <div class="item-info">
+          <header>
+            <h4>Butter pancakes</h4>
+            <h4>$15</h4>
+          </header>
+          <p class="item-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quae asperiores cupiditate? Distinctio quia consectetur incidunt consequuntur fugiat, blanditiis eum?
+          </p>
+        </div>
+      </article>
+      <!--single item end-->
+      </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
